--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
     "eslint": "8.32.0",
     "eslint-config-google": "0.14.0",
     "eslint-config-prettier": "8.6.0",
+    "eslint-plugin-cypress": "2.12.1",
     "eslint-plugin-prettier": "4.2.1",
     "eslint-plugin-react": "7.32.1",
     "jest": "29.4.2",
