--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,8 +29,7 @@ services:
       dockerfile: .devcontainer/Dockerfile
     command: sleep infinity
     environment:
-      - DOCKER_HOST_NAME=host.docker.internal
-      - DISPLAY=$DOCKER_HOST_NAMEhost.docker.internal:0
+      - DISPLAY=host.docker.internal:0
       - EXPO_DEVTOOLS_LISTEN_ADDRESS=host.docker.internal
       - REACT_NATIVE_PACKAGER_HOSTNAME=host.docker.internal
       - YAMLFIX_SEQUENCE_STYLE=block_style
